--- a/TODO.txt
+++ b/TODO.txt
@@ -28,15 +28,28 @@ contactId
 
   "HOTPLATE RELOADED"
 
+    MARCH
+
+    REDO JSONREST
+    [X] Finish documenting JsonRestStores
+    [X] Change JsonRestStores so that it has pluggable protocols, with HTTP implementation and Comet sketch
+    [X] Improve structure of documentation of JsonRestStores
+    [X] Improve deletion in SimpleDbLayer
+    [X] Make sure JsonRestStores passes all tests, data range tests are failing
+    [X] Make TingoDB work again with JsonRestStores
+
     [ ] Make everything work with the latest Express.JS
+
+    REFACTORING
+    [ ] Change `session` variable throughout Hotplate to request.session
     [ ] Take out onlineSearchSchema from WorkspacesUsers and UsersWorkspaces in hotCoreMultiHome.js
     [ ] In JsonRestStores, action TODO:
         // TODO: take AND out if Object.keys( self.onlineSearchSchema.structure ).length is only 1
         // TODO: Check what happens when sorting for a nested field with a 1:n relationship with table (?!)
     [ ] Change 'name' into 'type' in queries (double check that that's what it is in dstore)
-    [ ] Make everything work with the latest dstore
-    [ ] Make online application work again
-    
+    [ ] Install latest dstore
+
+    TIDY UP AND AGGREGATE
     [ ] Move Dojo itself into a module called hotClientLibDojo. Add other hotCLientLib**** (all they do is include those JSes)
     [ ] Move all Dojo files in ONE BIG Hotplate module hotClientLibDojoBridge (eventually, hotClientLibAngularBridge, hotClientLibBackboneBridge, hotClientLibAmberBridge, hotClientLibKnockoutBridge)
     [ ] Create a "pure javascript" layer called "hotClientBridge" that handles messages, events, anything
@@ -46,17 +59,17 @@ contactId
     [ ] Maybe see if it makes sense to write Dojo mixin to make templating easier using published schema (it would be just. so. good.)
     [ ] Generally check that client-side code is all good
     [ ] Move all documentation to JsDoc from YUIDoc, make sure hotplatejs' web site still works
+
     [ ] Write documentation for hotplate's server modules
     [ ] Write blueprint documentation for client modules
-    [ ] Write documentation for Dojo's bluepront widgets
+    [ ] Write documentation for Dojo's blueprint widgets
 
     [ ] Reach Nirvana with Dstore ## IMPROVE dstore, for nirvana
-      [.] Change dstore so that it can search in _children as well [Kris Zip's doing it]
+      [C] Change dstore so that it can search in _children as well [Kris Zip's doing it]
       [ ] Implement queryConditions in dstore: if defined, filtering will be based on those fields      
       [ ] Check that hotplate all works with new filtering, without ever doing a refresh (!!!)
       [ ] Client-side, make sure that when child table is updated, parent table looks for matching children
           and, if any, marks that one record as changed
-
 
 
 OMG Hotplate is finished?!?!?!?!?!?
@@ -161,7 +174,6 @@ Release pre-release of hotplate
       *
       [ ] Implement basic search in messages
 
-
 [LATER]
       *
       [ ] Add cache to the toAsString field, zap cache when a message has matching contactTo
@@ -201,7 +213,6 @@ Release pre-release of hotplate
   DEADLINE: 20 May 2015
   ---------------------
 
-[LATER]
 "GET PAID!"
   * Add accounting for SMSes: add credit, check credit before sending, check credit in queue
   * Add way to get paid and add credit (Paypal, or more likely Stripe, better API)
@@ -210,7 +221,6 @@ Release pre-release of hotplate
   DEADLINE: 30 May 2015
   ---------------------
 
-[LATER]
 "FINAL TOUCHES"
   * Have a look at hotDojoWidgets/lib/hotDojoWidgets.js, image in head will appear, might be good for the app
   * Make simple tabbed wizard to setup smtp and imap, with credential real-time check
@@ -218,6 +228,8 @@ Release pre-release of hotplate
   ---------------------
   DEADLINE: 10 Jun 2015
   ---------------------
+
+
 
   "BOOKINGS"
 
@@ -247,7 +259,6 @@ Release pre-release of hotplate
   * Work on CSS, make app look better with minimal intervention
     AND:
   * Do all those things that can be done during beautification
-    * Write function to run _completeRecord on each record of a collection, add it to simpleDbLayer
     * Full code audit
     * Full client-validation audit
     * Write web site text
@@ -257,9 +268,7 @@ Release pre-release of hotplate
   DEADLINE: 30 Aug 2015
   ---------------------
 
-                         --------------------------------------
-                          TONY, FINISH ALL THIS BY JANUARY!!!
-                         --------------------------------------
+                         
   "ADVANCED BOOKINGS"
 
   * Ability to set available "activities" for a contact and all contacts, with cost
@@ -295,18 +304,13 @@ Release pre-release of hotplate
 [LATER, LONGER TERM]
   * Add schema to static page, use schema for basic validation
   * Update JsonRestStores and querying so that "useRangeHeaders: true" and sortBy are no longer necessary
-  * Use SOCKJS for instand messanging instead of polling (dealing with authentication and reconnection)
-  * Replace any non-widget dojo with custom ones (mainly aspect, topic, signals)
-  * Take out Dojo layout widget for straight/WebComponent/Polymer ones
-  * Incorporate Mayhem for routing, stores, templates
-  * (When it even exists) switch to a widget library based on Polymer/web components, use it via Mayhem
+  * Use SOCKJS for instant messanging instead of polling (dealing with authentication and reconnection)
 
-[LATER]
-  ------------------------------------
   * StoreSelect: add a way to go back to initial value even if it's no longer in select
   * StoreSelect: add network resiliance
   * Make sure that everything is blind-friendly
   * Allow country selection for phone number from a select box (straight, Dojo's?)
+
 
 
   DONE:
