--- a/TODO.txt
+++ b/TODO.txt
@@ -50,17 +50,27 @@ contactId
         http://stackoverflow.com/questions/29115466/what-does-sort-do-in-mongodb-when-sorting-by-a-sub-field-in-an-array 
     [X] Change 'name' into 'type' in queries (double check that that's what it is in dstore)
 
+Angular, Backbone, Amber, Knockout, React, Mayhem
+    CLIENT-SIDE: AGGREGATE
+    [X] Make directories for other client-libraries (Angular, Knockout, Backbone, Ember, React, Mayhem)
+    [X] Move Dojo itself into a module called hotClientDojo: merge server-side and re-path the client side
+    [X] Reinstall GIT dependency sub-modules
+    [X] Install latest dstore, make everything work again with it applying local patches
+    [X] Work out paths properly
+    [X] Make sure all paths are resolved property with new layout
+    [X] Make registration work
+    [ ] Make SMS messaging work (re-work messagesManager, take API calls out)
+    [ ] Make parameters for callbacks/app.set uniform, set route and host/port separately
 
-    CLIENT-SIDE: TIDY UP AND AGGREGATE
-    [ ] Move Dojo itself into a module called hotClientLibDojo. Add other hotCLientLib**** (all they do is include those JSes)
-    [ ] Move all Dojo files in ONE BIG Hotplate module hotClientLibDojoBridge (eventually, hotClientLibAngularBridge, hotClientLibBackboneBridge, hotClientLibAmberBridge, hotClientLibKnockoutBridge)
-    [ ] Create a "pure javascript" layer called "hotClientBridge" that handles messages, events, anything
-    [ ] Change Dojo layer to use the hotClientBridge for features implemented there
+    CHECK IT
+    [ ] Check basic QA, make sure everything works
+    [ ] Write "testing checklist", something that includes ALL cases including logout from different tab
+
+    CLIENT SIDE: TIDY UP AND FINALISE 
+    [ ] Change the API for the store-aware widgets so that it only gets storeParameters once
     [ ] Improve client-side code in BookingDojo, using auto-updating templates whenever possible,
-        and changing the API for the store so that it only gets storeParameters once
-    [ ] Maybe see if it makes sense to write Dojo mixin to make templating easier using published schema (it would be just. so. good.)
-    [ ] Generally check that client-side code is all good
-    [ ] Install latest dstore, make everything work again
+    [ ] Write Dojo mixin to make templating easier using published schema (it would be just. so. good.) 
+    [ ] Go through the full "testing checklist"
 
     FINAL HOTPLATE STRETCH: DOCUMENTATION
     [ ] Re-prepare documentation for hotplate's server modules, check web site
@@ -76,6 +86,12 @@ contactId
       [ ] Check that hotplate all works with new filtering, without ever doing a refresh (!!!)
       [ ] Client-side, make sure that when child table is updated, parent table looks for matching children
           and, if any, marks that one record as changed
+
+  ----------------------
+  DEADLINE: 30 Apr 2015
+  ----------------------
+
+Jason, Jeremy (Felicity said no), Tel
 
 
 OMG Hotplate is finished?!?!?!?!?!?
@@ -230,6 +246,7 @@ NOW, example application NEEDS to get finished so that I can release!
 "FINAL TOUCHES"
   * Have a look at hotDojoWidgets/lib/hotDojoWidgets.js, image in head will appear, might be good for the app
   * Make simple tabbed wizard to setup smtp and imap, with credential real-time check
+  * Make application look better minimising the changes to the CSS
 
   ---------------------
   DEADLINE: 10 Jun 2015
@@ -240,22 +257,24 @@ THE EXAMPLE APPLICATION IS HERE
 HOTPLATE CAN BE RELEASED
 --------------------------------------------
 
-
   "BOOKINGS"
 
   * Make a "booking": an abstract entity that can be owned by a contact and that has a name
   * When an email or SMS comes in, ability to match it to a booking
-  ** Ability to have messages under a specific booking, setting it in the "New Message" screen
-  ** Implement simple TODO list for the bookings, date/time from, date/time to, who
-  ** Add calendar (Dojox's), rendering TODO items
+  * Ability to have messages under a specific booking, setting it in the "New Message" screen
+  * Implement simple TODO list for the bookings, date/time from, date/time to, who
+  * Add calendar (Dojox's), rendering TODO items
+  * Minimal CSS fixups
 
   ---------------------
   DEADLINE: 30 Jun 2015
   ---------------------
 
-
-
-"ADVANCED BOOKINGS"
+---------------------------------------
+RELEASE BOOKINGDOJO AS IT IS, IN BETA
+---------------------------------------
+  
+  "ADVANCED BOOKINGS"
 
   * Ability to set available "activities" for a contact and all contacts, with cost
   * product, money lines: [ booking owner | line owner | office ] OWES (min, max price) [ booking owner | line owner | office ] / qty
@@ -263,23 +282,22 @@ HOTPLATE CAN BE RELEASED
   * Ability to match activities (with dates) for a contact in a booking, render them in the calendar
 
   ---------------------
-  DEADLINE: 30 Jun 2015
+  DEADLINE: 30 Jul 2015
   ---------------------
+
 
   "BEAUTIFY AND FINAL TOUCHES"
 
-  * Work on CSS, make app look better with minimal intervention
-    AND:
-  * Do all those things that can be done during beautification
-    * Full code audit
-    * Full client-validation audit
-    * Write web site text
-    * Test drive possible usage
+  * Make application look better, and different to stock application
+  * Run a full code audit on everything
+  * Write web site text, put it online
+  * Give web site to Alan to improve
 
   ---------------------
-  DEADLINE: 30 July 2015
+  DEADLINE: 30 Aug 2015
   ---------------------
-                         
+  
+
   "ACCOUNTING"
 
   * Accounting summaries for each booking (with system-calculated ones)
@@ -288,8 +306,9 @@ HOTPLATE CAN BE RELEASED
   * Ability to _store_ received invoices
 
   ---------------------
-  DEADLINE: 30 Oct 2015
+  DEADLINE: 30 Sept 2015
   ---------------------
+
 
   "ADVANCED MESSAGES AND TEMPLATES"
 
@@ -297,25 +316,24 @@ HOTPLATE CAN BE RELEASED
   * Ability to send messages to different present types (all types in a booking)
   * Ability to set templates for messages of different types, with instant previews
   ---------------------
-  DEADLINE: 30 Nov 2015
+  DEADLINE: 30 Oct 2015
   ---------------------
 
-    "CONTACTS -- INTEGRATION"
+
+  "CONTACTS -- INTEGRATION"
 
   * Add G+ authentication
-  **** Allow to sync contacts with Facebook
-  **** Allow to sync contacts with G+
+  * Allow to sync contacts with Facebook
+  * Allow to sync contacts with G+
   * Add buttons to re-sync all contacts from specified modules
 
   ---------------------
-  DEADLINE: 30 Dec 2015
+  DEADLINE: 30 Nov 2015
   ---------------------
 
 [LATER, LONGER TERM]
-  * Add schema to static page, use schema for basic validation
   * Update JsonRestStores and querying so that "useRangeHeaders: true" and sortBy are no longer necessary
   * Use SOCKJS for instant messanging instead of polling (dealing with authentication and reconnection)
-
   * StoreSelect: add a way to go back to initial value even if it's no longer in select
   * StoreSelect: add network resiliance
   * Make sure that everything is blind-friendly
